--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title> xLyram </title>
@@ -9,6 +10,7 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
         p {
             border-style: solid;
             border-color: aqua;
@@ -24,18 +26,21 @@
 <body>
     <br>
     <center>
-        <button oneclick="window.location='https://instagram.com/_ramdh29' "style="background-color: #7ae6c9; color: black; height: 35px; width: 150px">
-        <b>INSTAGRAM</b>
+        <button onclick="window.location.href='https://instagram.com/_ramdh29'"
+            style="background-color: #7ae6c9; color: black; height: 35px; width: 150px"/>
+            <b>INSTAGRAM</b>
         </button>
         <br>
         <br>
-        <button oneclick="window.location='https://www.facebook.com/rainramadhan27' "style="background-color: #7ae6c9; color: black; height: 35px; width: 150px">
-        <b>FACEBOOK</b>
+        <button onclick="window.location='https://www.facebook.com/rainramadhan27' "
+            style="background-color: #7ae6c9; color: black; height: 35px; width: 150px">
+            <b>FACEBOOK</b>
         </button>
         <br>
         <br>
-        <button oneclick="window.location='https://discord.gg/mH6zEM7' "style="background-color: #7ae6c9; color: black; height: 35px; width: 150px">
-        <b>DISCORD</b>
+        <button onclick="window.location='https://discord.gg/mH6zEM7' "
+            style="background-color: #7ae6c9; color: black; height: 35px; width: 150px">
+            <b>DISCORD</b>
         </button>
     </center>
 
@@ -46,38 +51,39 @@
         <font color="red"> GAME ACCOUNT </font>
     </p>
 
-    <center><table border="2">
-        <tr>
-            <th rowspan="2" bgcolor="aqua">GAME</th>
-            <th colspan="2" bgcolor="aqua">Nick and ID</th>
-        </tr>
-        <tr>
-            <th bgcolor="red">Nick</th>
-            <th bgcolor="red">ID</th>
-        </tr>
-        <br>
-        <tr></tr>
-        <tr>
-            <td bgcolor="white">FREE FIRE</td>
-            <td bgcolor="white">SN Lyra09!</td>
-            <td bgcolor="white">98105945</td>
-        </tr>
-        <tr></tr>
-        <tr>
-            <td bgcolor="white">MOBILE LEGEND</td>
-            <td bgcolor="white">ZGSZOIG</td>
-            <td bgcolor="white">102230595(2530)</td>
-        </tr>
-        <tr></tr>
-        <tr>
-            <td bgcolor="white">PUBG MOBILE</td>
-            <td bgcolor="white">LP Lyra09!</td>
-            <td bgcolor="white">5260096596</td>
-        </tr>
-    </table>   
+    <center>
+        <table border="2">
+            <tr>
+                <th rowspan="2" bgcolor="aqua">GAME</th>
+                <th colspan="2" bgcolor="aqua">Nick and ID</th>
+            </tr>
+            <tr>
+                <th bgcolor="red">Nick</th>
+                <th bgcolor="red">ID</th>
+            </tr>
+            <br>
+            <tr></tr>
+            <tr>
+                <td bgcolor="white">FREE FIRE</td>
+                <td bgcolor="white">SN Lyra09!</td>
+                <td bgcolor="white">98105945</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <td bgcolor="white">MOBILE LEGEND</td>
+                <td bgcolor="white">ZGSZOIG</td>
+                <td bgcolor="white">102230595(2530)</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <td bgcolor="white">PUBG MOBILE</td>
+                <td bgcolor="white">LP Lyra09!</td>
+                <td bgcolor="white">5260096596</td>
+            </tr>
+        </table>
 
 
-    <marquee bgcolor="cyan" width="400"> Aku hanya gabut membuat ini :D </marquee>
+        <marquee bgcolor="cyan" width="400"> Aku hanya gabut membuat ini :D </marquee>
 
     </center>
 
@@ -85,6 +91,8 @@
 
     <a style="text-align: center; vertical-align: bottom;">
         <font color="white"> auto play song: a world of chaos by Powfu </font>
+        <font color="white"> gaada musik? browsermu kentang </font>
+
     </a>
 
 </body>
