--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
             background-size: cover;
         }
 
-        p {
+        .hhj {
             border-style: solid;
             border-color: aqua;
             background-color: darkred;
+            text-align: center;
         }
     </style>
 </head>
 
-<p> Tangal/Waktu: <span id="tgl"></span></p>
+<p class="hhj"> Tangal/Waktu: <span id="tgl"></span></p>
 <script>
     var dt = new Date()
     document.getElementById("tgl").innerHTML = (("0"+(dt.getMonth()+1)).slice(-2)) + "/" + (("0"+dt.getDate()).slice(-2)) +"/"+ (dt.getFullYear()) +" "+ (("0"+dt.getHours()+1).slice(-2)) + ":"+(("0"+dt.getMinutes()+1).slice(-2));
 </script>
 
 <p style="text-align: center;">
-    <font color="red"> SOSIAL ACCOUNT! </font>
+    <font aria-setsize="24"; color="red"> SOSIAL ACCOUNT! </font>
 </p>
 
 <body>
@@ -49,7 +50,7 @@
             <b>DISCORD</b>
         </button>
     </center>
-
+    <br> <hr size="10px" style="background-color: blue; border-style: solid;">
     <audio hidden autoplay loop>
         <source src="audio/chaos.mp3" type="audio/mpeg">
     </audio>
@@ -88,12 +89,13 @@
             </tr>
         </table>
 
+        <br><br>
 
-        <marquee bgcolor="cyan" width="400"> Aku hanya gabut membuat ini :D </marquee>
-
+        <marquee bgcolor="cyan" width="400"> I can't understand anything, can someone tell me a story to calm me down? <i>[I can't describe myself]</i> </marquee>
     </center>
-
-
+    <br>
+    <font style="text-align: center;" color="black"> Can you know me? I think everyone can't know me. Can understand me. If you know this text.. Keep spirit! </font>
+    <br><br>
 
     <a style="text-align: center; vertical-align: bottom;">
         <font color="white"> auto play song: a world of chaos by Powfu </font>
@@ -101,7 +103,8 @@
         <font color="white"> gaada musik? browsermu kentang </font>
 
     </a>
-
+    <br><br>
+    <font color="white"> Website ini akan diperbarui setiap yang buat ngesadboy&gak mager. </font>
 </body>
 
 
