--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             text-align: center;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <p class="hhj"> Tangal/Waktu: <span id="tgl"></span></p>
@@ -31,6 +32,14 @@
 </p>
 
 <body>
+    <div id="close">
+        <div class="container-popup">
+            <form action="#" method="post" class="popup-form">
+                <img src="https://cdn.discordapp.com/attachments/811050553839845407/823918788743135283/20210323_205810.jpg" alt="">
+            </form>
+            <a class="close" href="#close">close</a>
+        </div>
+    </div>
     <br>
     <center>
         <button onclick="window.location.href='https://instagram.com/_ramdh29'"
@@ -97,14 +106,14 @@
     <font style="text-align: center;" color="black"> Can you know me? I think everyone can't know me. Can understand me. If you know this text.. Keep spirit! </font>
     <br><br>
 
-    <a style="text-align: center; vertical-align: bottom;">
-        <font color="white"> auto play song: a world of chaos by Powfu </font>
-        <br>
-        <font color="white"> gaada musik? browsermu kentang </font>
-
-    </a>
+   
+    <font style="text-align: center;" color="white"> auto play song: a world of chaos by Powfu </font>
+    <br>
+    <font color="white"> gaada musik? browsermu kentang </font>
     <br><br>
+    <center>
     <font color="white"> Website ini akan diperbarui setiap yang buat ngesadboy&gak mager. </font>
+    </center>
 </body>
 
 
