--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </script>
 
 <p style="text-align: center;">
-    <font aria-setsize="24"; color="red"> SOSIAL ACCOUNT! </font>
+    <font style="font-size: 29px; color: cornflowerblue;"> SOSIAL ACCOUNT! </font>
 </p>
 
 <body>
@@ -64,7 +64,7 @@
         <source src="audio/chaos.mp3" type="audio/mpeg">
     </audio>
     <p style="text-align: center;">
-        <font color="red"> GAME ACCOUNT </font>
+        <font style="font-size: 29px; color: cornflowerblue;"> GAME ACCOUNT! </font>
     </p>
 
     <center>
@@ -103,16 +103,12 @@
         <marquee bgcolor="cyan" width="400"> I can't understand anything, can someone tell me a story to calm me down? <i>[I can't describe myself]</i> </marquee>
     </center>
     <br>
-    <font style="text-align: center;" color="black"> Can you know me? I think everyone can't know me. Can understand me. If you know this text.. Keep spirit! </font>
     <br><br>
-
-   
-    <font style="text-align: center;" color="white"> auto play song: a world of chaos by Powfu </font>
     <br>
-    <font color="white"> gaada musik? browsermu kentang </font>
+    <font style="font-size: 12px; color: white;"> auto play song: a world of chaos by Powfu <br>gaada musik? browsermu kentang </font>
     <br><br>
     <center>
-    <font color="white"> Website ini akan diperbarui setiap yang buat ngesadboy&gak mager. </font>
+    <font style="font-size: 12px; color: white;"> Website ini akan diperbarui setiap yang buat gak mager. </font>
     </center>
 </body>
 
