--- a/index.html
+++ b/index.html
@@ -21,28 +21,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<p class="hhj"> Tangal/Waktu: <span id="tgl"></span></p>
-<script>
-    var dt = new Date()
-    document.getElementById("tgl").innerHTML = (("0"+(dt.getMonth()+1)).slice(-2)) + "/" + (("0"+dt.getDate()).slice(-2)) +"/"+ (dt.getFullYear()) +" "+ (("0"+dt.getHours()+1).slice(-2)) + ":"+(("0"+dt.getMinutes()+1).slice(-2));
-</script>
-
-<p style="text-align: center;">
-    <font style="font-size: 29px; color: cornflowerblue;"> SOSIAL ACCOUNT! </font>
-</p>
 
 <body>
-    <div id="close">
-        <div class="container-popup">
-            <form action="#" method="post" class="popup-form">
-                <img src="https://cdn.discordapp.com/attachments/811050553839845407/823918788743135283/20210323_205810.jpg" alt="">
-            </form>
-            <a class="close" href="#close">close</a>
-        </div>
+    <div class="hiden">
+        <center><h4 class="nop">You are on potrait mode, please move to Landscape mode!</h4></center>
+        <img src="https://www.eaeelectric.com/work-shop/rotate.gif" alt="rotate" srcset="">
     </div>
     <br>
+   <div class="content">
+    <p style="text-align: center;">
+        <font style="font-size: 29px; color: cornflowerblue;"> SOSIAL ACCOUNT! </font>
+    </p>
     <center>
-        <button onclick="window.location.href='https://instagram.com/_ramdh29'"
+        <button onclick="window.location.href='https://instagram.com/_ram.xyz29'"
             style="background-color: #7ae6c9; color: black; height: 35px; width: 150px"/>
             <b>INSTAGRAM</b>
         </button>
@@ -54,7 +45,7 @@
         </button>
         <br>
         <br>
-        <button onclick="window.location='https://discord.gg/mH6zEM7' "
+        <button onclick="window.location='https://discord.gg/mH6zEM7'"
             style="background-color: #7ae6c9; color: black; height: 35px; width: 150px">
             <b>DISCORD</b>
         </button>
@@ -68,49 +59,60 @@
     </p>
 
     <center>
-        <table border="2">
-            <tr>
-                <th rowspan="2" bgcolor="aqua">GAME</th>
-                <th colspan="2" bgcolor="aqua">Nick and ID</th>
-            </tr>
-            <tr>
-                <th bgcolor="red">Nick</th>
-                <th bgcolor="red">ID</th>
-            </tr>
-            <br>
-            <tr></tr>
-            <tr>
+        <table class="mytable">
+            <thead>
+                <tr>
+                    <th>GAME</th>
+                    <th>Nickname</th>
+                    <th>ID</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="active-row">
+                    <td>FREE FIRE</td>
+                    <td>9xTwenty7</td>
+                    <td>98105945</td>
+                </tr>
+                <tr class="active-row">
+                    <td>MOBILE LEGEND</td>
+                    <td>Ramm Wlee</td>
+                    <td>102230595</td>
+                </tr>
+                <tr class="active-row">
+                    <td>PUBG MOBILE</td>
+                    <td>Ram Wlee</td>
+                    <td>5260096596</td>
+                </tr>
+            </tbody>
+            
+        </table>
+
+        <br><br>
+
+        <marquee bgcolor="red" width="400"> I can't understand anything, Nothing to say:), Any question?</marquee>
+        <footer style="color: white; padding-top: 20%; align-content: center; ">Created by Rz</footer>
+    </center>
+</div>
+</body>
+
+
+</html>
+
+
+<!-- <tr>
                 <td bgcolor="white">FREE FIRE</td>
-                <td bgcolor="white">SN Lyra09!</td>
+                <td bgcolor="white">9xTwenty7</td>
                 <td bgcolor="white">98105945</td>
             </tr>
             <tr></tr>
             <tr>
                 <td bgcolor="white">MOBILE LEGEND</td>
-                <td bgcolor="white">ZGSZOIG</td>
+                <td bgcolor="white">Ram Wlee</td>
                 <td bgcolor="white">102230595(2530)</td>
             </tr>
             <tr></tr>
             <tr>
                 <td bgcolor="white">PUBG MOBILE</td>
-                <td bgcolor="white">LP Lyra09!</td>
+                <td bgcolor="white">Ramm Wlee</td>
                 <td bgcolor="white">5260096596</td>
-            </tr>
-        </table>
-
-        <br><br>
-
-        <marquee bgcolor="cyan" width="400"> I can't understand anything, can someone tell me a story to calm me down? <i>[I can't describe myself]</i> </marquee>
-    </center>
-    <br>
-    <br><br>
-    <br>
-    <font style="font-size: 12px; color: white;"> auto play song: a world of chaos by Powfu <br>gaada musik? browsermu kentang </font>
-    <br><br>
-    <center>
-    <font style="font-size: 12px; color: white;"> Website ini akan diperbarui setiap yang buat gak mager. </font>
-    </center>
-</body>
-
-
-</html>
+            </tr> -->
