--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="hiden">
         <center><h4 class="nop">You are on potrait mode, please move to Landscape mode!</h4></center>
-        <img src="https://www.eaeelectric.com/work-shop/rotate.gif" alt="rotate" srcset="">
+        <img src="https://www.eaeelectric.com/work-shop/rotate.gif" alt="rotate" srcset="" class="myimg">
     </div>
     <br>
    <div class="content">
